Feature request on the IR branch: OFJ-3 Incident Reporting Module
Fixing the searchability of the IR module

--- a/application/views/scripts/incident/list.phtml
+++ b/application/views/scripts/incident/list.phtml
@@ -42,7 +42,7 @@ var myColumnDefs = [
     // DataTable configuration
     var myConfigs = {
         //dynamicData: false
-        initialRequest: "<?php echo $this->link; ?>/status/<?php print $this->status; ?>/startDt/<?php print $this->startDt; ?>/endDt/<?php print $this->endDt; ?>/keywords/<?php print $this->keywords; ?>/sortby/reportTs/order/asc/startIndex/0/count/<?php echo $this->pageInfo['count']?>",
+        initialRequest: "<?php echo $this->link; ?>/sortby/reportTs/order/asc/startIndex/0/count/<?php echo $this->pageInfo['count']?>",
         dynamicData: true, 
         sortedBy : {key:"reportTs", dir:YAHOO.widget.DataTable.CLASS_ASC},
         paginator: new YAHOO.widget.Paginator(
