Feature request on the IR branch: OFJ-3 Incident Reporting Module
Fixing a bug where anonymous incident reports can't be viewed due to an invalid check on the ReportingUser field.

--- a/application/views/scripts/incident/incidentdata.phtml
+++ b/application/views/scripts/incident/incidentdata.phtml
@@ -55,7 +55,7 @@
         <td colspan="3" style="text-align: left"><h1>Incident Details:</h1></td>
     </tr>
     <?php
-    if ($this->incident->ReportingUser):
+    if (isset($this->incident->ReportingUser)):
     ?>
         <tr>
             <td>Reporting User:</td>
