Improvement on the performance branch OFJ-110 Minifiy/Combine JS/CSS Fixes issues in OF-61 review. Add documentation, clean up some code. No changes in functionality. Dropped setUpCombo() in favor of a static private array.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -10,14 +10,9 @@
     echo $this->headTitle();
 
     // Initialize and load the YUI components needed
-    $yuiComponents = array('yahoo','dom','event','element',
-                           'container','json','cookie', 
-                           'get','dragdrop','animation',
-                           'menu','button','json', 
-                           'connection','logger','tabview', 
-                           'calendar','paginator','datasource',
-                           'datatable','selector','treeview', 
-                           'uploader','reset-fonts-grids');
+    $yuiComponents = array('yahoo', 'dom', 'event', 'element', 'container', 'json', 'cookie', 'get', 'dragdrop', 
+                           'animation', 'menu', 'button', 'json', 'connection', 'logger', 'tabview', 'calendar',
+                           'paginator','datasource', 'datatable', 'selector', 'treeview', 'uploader','reset-fonts-grids');
 
     $yui = new Fisma_Loader();
     $yui->load($yuiComponents);
