--- a/application/layouts/scripts/notice.phtml
+++ b/application/layouts/scripts/notice.phtml
@@ -6,8 +6,7 @@
             echo $this->headTitle()->prepend(Configuration::getConfig('system_name'));
 
             // Initialize and load the YUI components needed for this page
-            $yuiComponents = array('yahoo', 'dom', 'event', 'element',
-                                   'button');
+            $yuiComponents = array('yahoo', 'dom', 'event', 'element', 'button');
 
             $yui = new Fisma_Loader();
             $yui->load($yuiComponents);
