Admin Merge from trunk into performance branch, 2460:2481

--- a/application/layouts/scripts/install.phtml
+++ b/application/layouts/scripts/install.phtml
@@ -5,7 +5,9 @@
 <head>
   <title>OpenFISMA Custom Installation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="/stylesheets/install.css" />
+  <style type="text/css" media="all">
+  <!-- @import url(/stylesheets/install.css); -->
+  </style>
   <link rel="icon"
         type="image/ico"
         href="/images/favicon.ico" />
