--- a/application/views/scripts/install/complete.phtml
+++ b/application/views/scripts/install/complete.phtml
@@ -8,7 +8,9 @@
                         <p> Click <a href='<?php echo $this->next; ?>'>HERE</a> to
                             see the home page of your site. </p>
 			<p>You may log in with the
-							username "root" and the password that you have set.</p>
+							username "root" and the default password is "0p3nfism@",
+							please note the 0 is a zero. Please change this password
+							immediately.</p>
                     </li>
                     <li> <u><b>Support</b></u></li>
                     <li>
