--- a/application/config/form/finding.form
+++ b/application/config/form/finding.form
@@ -14,6 +14,7 @@ elementPrefixPath.path = Fisma/Form
 elementPrefixPath.type = Validate
 method = "post"
 elementFilters.trim = "StringTrim"
+elementFilters.tags = "StripTags"
 
 elements.discoveredDate.type = "text"
 elements.discoveredDate.options.label = "Discovered Date"
