--- a/application/config/form/network.form
+++ b/application/config/form/network.form
@@ -11,6 +11,7 @@
 [network]
 method = "post"
 elementFilters.trim = "StringTrim"
+elementFilters.tags = "StripTags"
 
 elements.name.type = "text"
 elements.name.options.label = "Network Name"
