--- a/application/config/form/role.form
+++ b/application/config/form/role.form
@@ -11,6 +11,7 @@
 [role]
 method = "post"
 elementFilters.trim = "StringTrim"
+elementFilters.tags = "StripTags"
 
 elements.name.type = "text"
 elements.name.options.label = "Role Name"
