--- a/application/config/form/source.form
+++ b/application/config/form/source.form
@@ -11,6 +11,7 @@
 [source]
 method = "post"
 elementFilters.trim = "StringTrim"
+elementFilters.tags = "StripTags"
 
 elements.name.type = "text"
 elements.name.options.label = "Source Name"
