--- a/application/config/form/system.form
+++ b/application/config/form/system.form
@@ -9,6 +9,7 @@
 [system]
 method = "post"
 elementFilters.trim = "StringTrim"
+elementFilters.tags = "StripTags"
 
 elements.name.type = "text"
 elements.name.options.label = "System Name"
