--- a/application/layouts/scripts/install.phtml
+++ b/application/layouts/scripts/install.phtml
@@ -5,9 +5,7 @@
 <head>
   <title>OpenFISMA Custom Installation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <style type="text/css" media="all">
-  <!-- @import url(/stylesheets/install.css); -->
-  </style>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/install.css" />
   <link rel="icon"
         type="image/ico"
         href="/images/favicon.ico" />
