Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Move the Fisma_Acl class in the Asset view scripts to AssetController.

--- a/application/views/scripts/asset/edit.phtml
+++ b/application/views/scripts/asset/edit.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('asset/navibar.phtml');
+echo $this->partial('asset/navibar.phtml', array('createAssetPrivilege' => $this->createAssetPrivilege));
 Fisma_Format_Section::startSection("Product Information</b> [<a href='{$this->viewLink}'>View</a>]"); ?>
 
 <div class="form_box">
