--- a/application/views/scripts/asset/navibar.phtml
+++ b/application/views/scripts/asset/navibar.phtml
@@ -12,7 +12,7 @@
         ?>
 
         <?php 
-        if (Fisma_Acl::hasPrivilegeForClass('create', 'Asset')) {
+        if ($this->createAssetPrivilege) {
             $createButton = new Fisma_Yui_Form_Button_Link(
                 'createButton', 
                 array(
