Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Moved references to Fisma_Acl from User view scripts into UserController

--- a/application/views/scripts/user/edit.phtml
+++ b/application/views/scripts/user/edit.phtml
@@ -3,7 +3,7 @@
 echo $this->partial('user/searchbox.phtml');
 $operation = "[<a href='{$this->viewLink}'>View</a>]";
 
-if (Fisma_Acl::hasPrivilegeForObject('read', $this->subject)) {
+if ($this->readUserObjPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->auditLogLink}'>Audit Log</a>]";
 }
 
