--- a/application/views/scripts/user/list.phtml
+++ b/application/views/scripts/user/list.phtml
@@ -1,5 +1,8 @@
 <?php
-echo $this->partial('user/searchbox.phtml', array('keywords' => $this->keywords));
+echo $this->partial(
+    'user/searchbox.phtml',
+    array('keywords' => $this->keywords, 'createUserPrivilege' => $this->createUserPrivilege)
+);
 Fisma_Format_Section::startSection("User Account List <span id='searchResultsTotalFound'></span>"); 
 ?>
 <div id="list"></div>
@@ -75,7 +78,7 @@ var myColumnDefs = [
     myDataTable.subscribe("rowMouseoverEvent", myDataTable.onEventHighlightRow); 
     myDataTable.subscribe("rowMouseoutEvent", myDataTable.onEventUnhighlightRow);
     <?php 
-    if (Fisma_Acl::hasPrivilegeForClass('read', 'User')) { 
+    if ($this->readUserPrivilege) { 
     ?>
     myDataTable.subscribe("rowClickEvent", 
         function (oArgs) {
