--- a/application/views/scripts/user/view.phtml
+++ b/application/views/scripts/user/view.phtml
@@ -1,13 +1,13 @@
 <?php
-echo $this->partial('user/searchbox.phtml');
+echo $this->partial('user/searchbox.phtml', array('createUserPrivilege' => $this->createUserPrivilege));
 $operation = '';
-if (Fisma_Acl::hasPrivilegeForObject('update', $this->subject)) {
+if ($this->updateUserObjPrivilege) {
     $operation .= "[<a href='{$this->editLink}'>Edit</a>]";
 }
-if (Fisma_Acl::hasPrivilegeForObject('delete', $this->subject)) {
+if ($this->deleteUserObjPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->deleteLink}'>Delete</a>]";
 }
-if (Fisma_Acl::hasPrivilegeForObject('read', $this->subject)) {
+if ($this->readUserObjPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->auditLogLink}'>Audit Log</a>]";
 }
 Fisma_Format_Section::startSection("User Account Information $operation"); ?>
