Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Moved Fisma_Acl references from Dashboard, Incident, Ir-category, Ir-workflow, 
Network, Organization and Product view scripts into each of corresponding Controller. 
Fixed typo in UserController class.
Define a variable createUserPrivilege in user/edit.phtml.

--- a/application/views/scripts/incident/incident.phtml
+++ b/application/views/scripts/incident/incident.phtml
@@ -1,6 +1,6 @@
 <form method="post" action="<?php echo $this->formAction; ?>">
     <?php
-    if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+    if ($this->updateIncidentObjPrivilege):
     ?>
         <div class="toolbar">
             <?php
@@ -95,7 +95,7 @@
                     <div name="incident[additionalInfo]" 
                          id="additionalInfo"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="textarea"
@@ -113,7 +113,7 @@
                     <div name="incident[actionsTaken]" 
                          id="actionsTaken"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="textarea"
@@ -137,7 +137,7 @@
                     <div name="incident[hostName]" 
                          id="hostName"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="text"
@@ -155,7 +155,7 @@
                     <div name="incident[hostIp]" 
                          id="hostIp"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="text"
@@ -173,7 +173,7 @@
                     <div name="incident[hostOs]" 
                          id="hostOs"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="select"
@@ -192,7 +192,7 @@
                     <div name="incident[hostAdditional]" 
                          id="hostAdditional"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="textarea"
@@ -244,7 +244,7 @@
                         <div name="incident[reporterOrganization]" 
                              id="reporterOrganization"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -262,7 +262,7 @@
                         <div name="incident[reporterAddress1]" 
                              id="reporterAddress1"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -280,7 +280,7 @@
                         <div name="incident[reporterAddress2]" 
                              id="reporterAddress2"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -306,7 +306,7 @@
                         <div name="incident[reporterPhone]" 
                              id="reporterPhone"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -323,7 +323,7 @@
                         <div name="incident[reporterFax]" 
                              id="reporterFax"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -341,7 +341,7 @@
                         <div name="incident[reporterEmail]" 
                              id="reporterEmail"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -368,7 +368,7 @@
                     <div name="incident[locationBuilding]" 
                          id="locationBuilding"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="text"
@@ -386,7 +386,7 @@
                     <div name="incident[locationRoom]" 
                          id="locationRoom"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="text"
@@ -404,7 +404,7 @@
                     <div name="incident[sourceIp]" 
                          id="sourceIp"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="text"
@@ -422,7 +422,7 @@
                     <div name="incident[sourceAdditional]" 
                          id="sourceAdditional"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="textarea"
@@ -455,7 +455,7 @@
                     <div name="incident[piiInvolved]" 
                          id="piiInvolved"
                          <?php
-                         if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                         if ($this->updateIncidentObjPrivilege):
                          ?>
                              class="editable"
                              type="select"
@@ -477,7 +477,7 @@
                         <div name="incident[piiAdditional]" 
                              id="piiAdditional"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="textarea"
@@ -495,7 +495,7 @@
                         <div name="incident[piiMobileMedia]" 
                              id="piiMobileMedia"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -514,7 +514,7 @@
                         <div name="incident[piiMobileMediaType]" 
                              id="piiMobileMediaType"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -533,7 +533,7 @@
                         <div name="incident[piiEncrypted]" 
                              id="piiEncrypted"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -552,7 +552,7 @@
                         <div name="incident[piiAuthoritiesContacted]" 
                              id="piiAuthoritiesContacted"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -571,7 +571,7 @@
                         <div name="incident[piiPoliceReport]" 
                              id="piiPoliceReport"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -590,7 +590,7 @@
                         <div name="incident[piiIndividualsCount]" 
                              id="piiIndividualsCount"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -608,7 +608,7 @@
                         <div name="incident[piiIndividualsNotified]" 
                              id="piiIndividualsNotified"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -627,7 +627,7 @@
                         <div name="incident[piiShipment]" 
                              id="piiShipment"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -646,7 +646,7 @@
                         <div name="incident[piiShipmentSenderCompany]" 
                              id="piiShipmentSenderCompany"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="text"
@@ -664,7 +664,7 @@
                         <div name="incident[piiShipmentSenderContacted]" 
                              id="piiShipmentSenderContacted"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="select"
@@ -683,7 +683,7 @@
                         <div name="incident[piiShipmentTimeline]" 
                              id="piiShipmentTimeline"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="textarea"
@@ -701,7 +701,7 @@
                         <div name="incident[piiShipmentTrackingNumbers]" 
                              id="piiShipmentTrackingNumbers"
                              <?php
-                             if (Fisma_Acl::hasPrivilegeForObject('update', $this->incident)):
+                             if ($this->updateIncidentObjPrivilege):
                              ?>
                                  class="editable"
                                  type="textarea"
