--- a/application/views/scripts/asset/create.phtml
+++ b/application/views/scripts/asset/create.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('asset/navibar.phtml');
+echo $this->partial('asset/navibar.phtml', array('createAssetPrivilege' => $this->createAssetPrivilege));
 Fisma_Format_Section::startSection("Asset Creation"); 
 ?>
 <div class="form_box">
