--- a/application/views/scripts/dashboard/index.phtml
+++ b/application/views/scripts/dashboard/index.phtml
@@ -11,7 +11,7 @@
             There are <b><a href="<?php echo $this->url;?>DRAFT"><?PHP echo $this->alert['DRAFT'];?></a></b>
             DRAFT findings (findings that have a mitigation strategy but have not been submitted for approval).
         </li>
-<?php if (Fisma_Acl::hasPrivilegeForClass('approve', 'Finding')) : ?>
+<?php if ($this->approveFindingPrivilege) : ?>
         <li>
             There are <b><a href="<?php echo $this->pendingUrl ?>"><?php echo $this->alert['PEND'];?></a></b>
             PENDING findings awaiting approval.
