--- a/application/views/scripts/ir-category/subview.phtml
+++ b/application/views/scripts/ir-category/subview.phtml
@@ -1,9 +1,9 @@
 <?php
 $operation = '';
-if (Fisma_Acl::hasPrivilegeForClass('update', 'IrCategory')) {
+if ($this->updateIrCategoryPrivilege) {
     $operation .= "[<a href='{$this->editLink}'>Edit</a>]";
 }
-if (Fisma_Acl::hasPrivilegeForClass('delete', 'IrCategory')) {
+if ($this->deleteIrCategoryPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->deleteLink}'>Delete</a>]";
 }
 Fisma_Format_Section::startSection("Sub Category Information</b> $operation"); ?>
