--- a/application/views/scripts/network/searchbox.phtml
+++ b/application/views/scripts/network/searchbox.phtml
@@ -8,7 +8,7 @@
         ?>
 
         <?php 
-        if (Fisma_Acl::hasPrivilegeForClass('create', 'Network')) {
+        if ($this->createNetworkPrivilege) {
             $createButton = new Fisma_Yui_Form_Button_Link('createButton', 
                                                    array('value' => 'Add Network', 
                                                          'href' => '/panel/network/sub/create'));
