--- a/application/views/scripts/network/view.phtml
+++ b/application/views/scripts/network/view.phtml
@@ -1,10 +1,10 @@
 <?php
-echo $this->partial('network/searchbox.phtml');
+echo $this->partial('network/searchbox.phtml', array('createNetworkPrivilege' => $this->createNetworkPrivilege));
 $operation = '';
-if (Fisma_Acl::hasPrivilegeForObject('update', $this->subject)) {
+if ($this->updateNetworkObjPrivilege) {
     $operation .= "[<a href='{$this->editLink}'>Edit</a>]";
 }
-if (Fisma_Acl::hasPrivilegeForObject('delete', $this->subject)) {
+if ($this->deleteNetworkObjPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->deleteLink}'>Delete</a>]";
 }
 Fisma_Format_Section::startSection("Network Information $operation"); ?>
