--- a/application/views/scripts/remediation/risk-analysis.phtml
+++ b/application/views/scripts/remediation/risk-analysis.phtml
@@ -3,7 +3,7 @@
     $organization = $finding->ResponsibleOrganization->nickname;
 ?>
 <?php
-if (Fisma_Acl::hasPrivilegeForObject('read', $finding)) {
+if ($this->readFindingObjPrivilege) {
     Fisma_Format_Section::startSection("Risk Analysis Form (RAF)"); 
 ?>
     <p>
@@ -50,7 +50,7 @@ if (Fisma_Acl::hasPrivilegeForObject('read', $finding)) {
 
     <span id ="threat_level" type="select" name="finding[threatLevel]" href="/metainfo/list/o/threat_level/format/html/"
         <?php 
-        if (Fisma_Acl::hasPrivilegeForObject('update_threat', $finding)
+        if ($this->updateThreatFindingObjPrivilege
             && ('NEW' == $finding->status || 'DRAFT' == $finding->status)) {
             echo ' class="editable" target="threat_level"';
         }
@@ -62,7 +62,7 @@ if (Fisma_Acl::hasPrivilegeForObject('read', $finding)) {
 <p>
     <b target="threat" 
         <?php
-        if (Fisma_Acl::hasPrivilegeForObject('update_threat', $finding)
+        if ($this->updateThreatFindingObjPrivilege
            && ('NEW' == $finding->status || 'DRAFT' == $finding->status)) { 
             echo 'class="editable"';
         } 
@@ -96,7 +96,7 @@ if (Fisma_Acl::hasPrivilegeForObject('read', $finding)) {
           id="effectiveness" 
           href="/metainfo/list/o/countermeasures-effectiveness/format/html/"
         <?php
-        if (Fisma_Acl::hasPrivilegeForObject('update_countermeasures', $finding)
+        if ($this->updateCountermeasuresFindingObjPrivilege
            && ('NEW' == $finding->status || 'DRAFT' == $finding->status)) {
             echo 'class="editable" target="effectiveness"';
         }
@@ -108,7 +108,7 @@ if (Fisma_Acl::hasPrivilegeForObject('read', $finding)) {
 <p>
     <b target="countermeasures" 
         <?php 
-            if (Fisma_Acl::hasPrivilegeForObject('update_countermeasures', $finding)
+            if ($this->updateCountermeasuresFindingObjPrivilege
                && ('NEW' == $finding->status || 'DRAFT' == $finding->status)) {
                 echo 'class="editable"';
             } 
