--- a/application/views/scripts/remediation/security-control.phtml
+++ b/application/views/scripts/remediation/security-control.phtml
@@ -15,7 +15,7 @@
                   name="finding[securityControlId]" 
                   href="/metainfo/list/o/security_control/format/html/"
                     <?php
-                    if (Fisma_Acl::hasPrivilegeForObject('update_control_assignment', $this->finding)
+                    if ($this->updateControlAssignmentFindingObjPrivilege
                         && ('NEW' == $this->finding->status || 'DRAFT' == $this->finding->status)) {
                         echo "class='editable' target='security_control'";
                     }
