Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Move references to Fisma_Acl class in the Role view scripts to RoleController.

--- a/application/views/scripts/role/create.phtml
+++ b/application/views/scripts/role/create.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('role/searchbox.phtml');
+echo $this->partial('role/searchbox.phtml', array('createRolePrivilege' => $this->createRolePrivilege));
 Fisma_Format_Section::startSection("Create Role"); ?>
 
 <div class="form_box"> 
