--- a/application/views/scripts/role/edit.phtml
+++ b/application/views/scripts/role/edit.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('role/searchbox.phtml');
+echo $this->partial('role/searchbox.phtml', array('createRolePrivilege' => $this->createRolePrivilege));
 Fisma_Format_Section::startSection("Edit Role Information [<a href='{$this->viewLink}'>View</a>]"); ?>
 
 <div class="form_box">
