--- a/application/views/scripts/role/list.phtml
+++ b/application/views/scripts/role/list.phtml
@@ -1,5 +1,8 @@
 <?php 
-echo $this->partial('role/searchbox.phtml', array('keywords' => $this->keywords));
+echo $this->partial(
+    'role/searchbox.phtml',
+    array('keywords' => $this->keywords, 'createRolePrivilege' => $this->createRolePrivilege)
+);
 Fisma_Format_Section::startSection("Roles List <span id='searchResultsTotalFound'></span>"); ?>
 <div id="list"></div>
 <script type="text/javascript">
@@ -70,7 +73,7 @@ var myColumnDefs = [
     myDataTable.subscribe("rowMouseoverEvent", myDataTable.onEventHighlightRow); 
     myDataTable.subscribe("rowMouseoutEvent", myDataTable.onEventUnhighlightRow);
     <?php 
-    if (Fisma_Acl::hasPrivilegeForClass('read', 'Role')) { 
+    if ($this->readRolePrivilege) { 
     ?>
     myDataTable.subscribe("rowClickEvent", 
         function (oArgs) {
