--- a/application/views/scripts/role/right.phtml
+++ b/application/views/scripts/role/right.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('role/searchbox.phtml');
+echo $this->partial('role/searchbox.phtml', array('createRolePrivilege' => $this->createRolePrivilege));
 Fisma_Format_Section::startSection("Rights Assignment"); ?>
 
 <form method="post" action="/role/right/id/<?php echo $this->role['id'];?>/do/update" 
