--- a/application/views/scripts/role/searchbox.phtml
+++ b/application/views/scripts/role/searchbox.phtml
@@ -8,7 +8,7 @@
         ?>
 
         <?php 
-        if (Fisma_Acl::hasPrivilegeForClass('create', 'Role')) {
+        if ($this->createRolePrivilege) {
         $createButton = new Fisma_Yui_Form_Button_Link('createButton', 
                                                array('value' => 'Add Role', 
                                                      'href' => '/panel/role/sub/create'));
