Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Moved variable createNetworkPrivilege and createProductPrivilege reference to preDispatch() method in each of corresponding Controller.

--- a/application/views/scripts/product/create.phtml
+++ b/application/views/scripts/product/create.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('product/searchbox.phtml');
+echo $this->partial('product/searchbox.phtml', array('createProductPrivilege' => $this->createProductPrivilege));
 Fisma_Format_Section::startSection("Create Product Information"); ?>
 
 <div class="form_box">
