Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Moved Fisma_Acl references from Source view scripts to SourceController.

--- a/application/views/scripts/source/list.phtml
+++ b/application/views/scripts/source/list.phtml
@@ -1,5 +1,11 @@
 <?php 
-echo $this->partial('source/searchbox.phtml', array('keywords' => $this->keywords));
+echo $this->partial(
+    'source/searchbox.phtml',
+    array(
+        'keywords' => $this->keywords,
+        'createSourcePrivilege' => $this->createSourcePrivilege
+    )
+);
 Fisma_Format_Section::startSection("Source List <span id='searchResultsTotalFound'></span>"); ?>
 <div id="list"></div>
 <script type="text/javascript">
