--- a/application/views/scripts/source/edit.phtml
+++ b/application/views/scripts/source/edit.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('source/searchbox.phtml');
+echo $this->partial('source/searchbox.phtml', array('createSourcePrivilege' => $this->createSourcePrivilege));
 Fisma_Format_Section::startSection("Finding Source Information [<a href='{$this->viewLink}'>View</a>]"); ?>
 
 <div class="form_box">
