Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Moved Fisma_Acl references from System view scripts to SystemController.

--- a/application/views/scripts/system/edit.phtml
+++ b/application/views/scripts/system/edit.phtml
@@ -1,5 +1,8 @@
 <?php 
-echo $this->partial('system/searchbox.phtml');
+echo $this->partial(
+    'system/searchbox.phtml',
+    array('createOrganizationPrivilege' => $this->createOrganizationPrivilege)
+);
 Fisma_Format_Section::startSection("System Information [<a href='{$this->viewLink}'>View</a>]"); ?>
 
 <div class="form_box">
