--- a/application/views/scripts/system/view.phtml
+++ b/application/views/scripts/system/view.phtml
@@ -35,7 +35,7 @@ function executeScript() {
       method="post">
     <div class="toolbar">
         <?php            
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
                 echo new Fisma_Yui_Form_Button('discardChanges',
                                                 array('label' => 'Discard Changes', 
                                                       'onClickFunction' => 'discardChanges'));
