--- a/application/views/scripts/system/create.phtml
+++ b/application/views/scripts/system/create.phtml
@@ -1,5 +1,8 @@
 <?php 
-echo $this->partial('system/searchbox.phtml');
+echo $this->partial(
+    'system/searchbox.phtml',
+    array('createOrganizationPrivilege' => $this->createOrganizationPrivilege)
+);
 Fisma_Format_Section::startSection("{$this->title} System Information"); ?>
 
 <div class="form_box">
