--- a/application/views/scripts/system/fisma.phtml
+++ b/application/views/scripts/system/fisma.phtml
@@ -7,7 +7,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                   id="controlledBy" 
                   class="editable" 
@@ -27,7 +27,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
                 <?php
-                if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+                if ($this->updateOrganizationObjPrivilege) {
                 ?>
                     id="securityAuthorizationDt" 
                     class="editable date" 
@@ -46,7 +46,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="contingencyPlanTestDt" 
                   class="editable date" 
@@ -65,7 +65,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="controlAssessmentDt" 
                   class="editable date" 
@@ -85,7 +85,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="hasFiif" 
                   class="editable" 
@@ -113,7 +113,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="hasPii" 
                   class="editable" 
@@ -133,7 +133,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
             id="piaRequired" 
                   class="editable" 
@@ -153,7 +153,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="piaUrl" 
                   class="editable" 
@@ -181,7 +181,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="sornRequired" 
                   class="editable" 
@@ -201,7 +201,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="sornUrl" 
                   class="editable" 
@@ -242,7 +242,7 @@ Fisma_Format_Section::startSection('FISMA Data');
         <td>
             <span 
             <?php
-            if (Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+            if ($this->updateOrganizationObjPrivilege) {
             ?>
                 id="uniqueProjectId" 
                   class="editable" 
