--- a/application/views/scripts/system/searchbox.phtml
+++ b/application/views/scripts/system/searchbox.phtml
@@ -8,7 +8,7 @@
         ?>
 
         <?php 
-        if (Fisma_Acl::hasPrivilegeForClass('create', 'Organization')) {
+        if ($this->createOrganizationPrivilege) {
             $createButton = new Fisma_Yui_Form_Button_Link('createButton', 
                                                    array('value' => 'Add System', 
                                                          'href' => '/panel/system/sub/create'));
