Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Missed artifacts and system view script files in the commit.

--- a/application/views/scripts/system/artifacts.phtml
+++ b/application/views/scripts/system/artifacts.phtml
@@ -2,7 +2,7 @@
 $uploadPanelButton = new Fisma_Yui_Form_Button('uploadPanelButton', 
                                                array('label' => 'Upload Document', 
                                                      'onClickFunction' => 'showUploadPanel'));
-if (!Fisma_Acl::hasPrivilegeForObject('update', $this->organization)) {
+if (!$this->updateOrganizationObjPrivilege) {
     $uploadPanelButton->readOnly = true;
 }
 print $uploadPanelButton;
