Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Override parent createAction(). 
Define a variable createUserPrivilege in user/create.phtml and user/log.phtml.

--- a/application/views/scripts/user/log.phtml
+++ b/application/views/scripts/user/log.phtml
@@ -1,5 +1,5 @@
 <?php 
-echo $this->partial('user/searchbox.phtml');
+echo $this->partial('user/searchbox.phtml', array('createUserPrivilege' => $this->createUserPrivilege));
 $operation = "[<a href='{$this->viewLink}'>View</a>]";
 Fisma_Format_Section::startSection("User Audit Log ($this->username) $operation"); 
 ?>
