--- a/application/views/scripts/user/create.phtml
+++ b/application/views/scripts/user/create.phtml
@@ -1,5 +1,5 @@
 <?php
-echo $this->partial('user/searchbox.phtml');
+echo $this->partial('user/searchbox.phtml', array('createUserPrivilege' => $this->createUserPrivilege));
 Fisma_Format_Section::startSection('User Account Information'); ?>
 
 <?php 
