Task on branch OFJ-565  Stop objects from being passed to view scripts A-M
Converted objects from Asset and Auth controller to arrays before being assigned to view script.
Moved those view variables to its controller in submitted view script.

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,9 +1,9 @@
 <div class="hd">
-    <?php echo Fisma::configuration()->getConfig('system_name');?>
+    <?php echo $this->systemName;?>
 </div>
 
 <div class="bd">
-    <?php echo Fisma::configuration()->getConfig('use_notification');?>
+    <?php echo $this->useNotification;?>
         
     <p class="message">
         <?php 
