--- a/application/views/scripts/auth/privacy.phtml
+++ b/application/views/scripts/auth/privacy.phtml
@@ -1,5 +1,5 @@
 <?php 
-    Fisma_Format_Section::startSection(Fisma::configuration()->getConfig('system_name') . ' Privacy Policy');
-    print(Fisma::configuration()->getConfig('privacy_policy'));
+    Fisma_Format_Section::startSection($this->systemName . ' Privacy Policy');
+    print($this->privacyPolicy);
     Fisma_Format_Section::stopSection(); 
 ?>
