--- a/application/views/scripts/auth/rob.phtml
+++ b/application/views/scripts/auth/rob.phtml
@@ -1,5 +1,5 @@
 <?php 
 
-Fisma_Format_Section::startSection(Fisma::configuration()->getConfig('system_name') . ' Rules of Behavior');
-print(Fisma::configuration()->getConfig('behavior_rule'));
+Fisma_Format_Section::startSection($this->systemName . ' Rules of Behavior');
+print($this->behaviorRule);
 Fisma_Format_Section::stopSection(); 
