--- a/application/views/scripts/finding/approve.phtml
+++ b/application/views/scripts/finding/approve.phtml
@@ -33,24 +33,7 @@
         ,{key:"oStatus", label:"Duplicate POAM Status", hidden: false}
     ];
      
-<?php
-    $records = array();
-
-    foreach ($this->findings as $finding) {
-        $records[] = array(
-            'nId' => $finding->id, 
-            'nNickname' => $finding->ResponsibleOrganization->nickname, 
-            'nDesc' => $finding->description, 
-            'oId' => $finding->DuplicateFinding->id,
-            'oType' => $finding->DuplicateFinding->type, 
-            'oNickname' => $finding->DuplicateFinding->ResponsibleOrganization->nickname,
-            'oStatus' => $finding->DuplicateFinding->status
-        );
-    }
-
-    $records = json_encode($records);
-?>
-    var dataSource = { rows: <?php echo $records; ?> }; 
+    var dataSource = { rows: <?php echo json_encode($this->records); ?> }; 
      
     var myDataSource = new YAHOO.util.DataSource(dataSource.rows);
     
