--- a/application/views/scripts/mail/IRClose.phtml
+++ b/application/views/scripts/mail/IRClose.phtml
@@ -4,4 +4,4 @@ Incident #<?php echo $this->incidentId; ?> has been closed.
 
 You can view the incident at:
 
-<?php echo Fisma_Url::baseUrl(); ?>/panel/incident/sub/view/id/<?php echo $this->incidentId; ?>
+<?php echo $this->incidentLink; ?>
